Fixed media query max width performance and added nowrap for menu items

--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-@media (max-width: 1600px) {
+@media (max-width: 1500px) {
   :root {
     --padding-side: 50px;
   }
